src/objects/Treatment_Centre__c.object
<CustomObject>
    <fields>
        <fullName>ANCHORID__c</fullName>
        <label>ANCHORID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCA__c</fullName>
        <label>CCA</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CentreNo__c</fullName>
        <label>CentreNo</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CentreType__c</fullName>
        <label>CentreType</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountyCode__c</fullName>
        <label>CountyCode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HB__c</fullName>
        <label>HB</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StatType__c</fullName>
        <label>StatType</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer</label>
        <type>Checkbox</type>
    </fields>
    <label>Treatment Centre</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CentreNo__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Treatment Centres</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>CentreNo__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Centre Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Treatment Centres</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>